# notion-toolkit

./: .gitignore  Makefile  main.py  notion.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/notion_toolkit/: notion.py  schema.py
src/notion_toolkit/schema/: __init__.py  block.py  common.py  page.py  page_properties.py  parent.py  rich_text.py
src/notion_toolkit/utils/: logging.py
tests/: test_schema.py
tests/utils/: test_logging.py
